# application_review

./: Cargo.toml  Dioxus.toml  docker-compose.yml  dockerfile
assets/: questions.json
assets/styling/: review.css
src/: main.rs
src/views/: home.rs
