[package]
name = "review"
version = "0.1.0"
authors = ["finn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }

# Server-only dependencies
mongodb = { version = "2.8", optional = true }
tokio = { version = "1", features = ["macros", "rt"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["mongodb", "tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
